# 3D-MAV-Path-Planner

./: .gitignore  .gitmodules  LICENSE.txt  README.md  ros_install.sh
path_planner/: CMakeLists.txt  Doxyfile  package.xml
path_planner/docs/html/: annotated.html  b__rrt__star__planner_8h.html  b__rrt__star__planner_8h__dep__incl.map  b__rrt__star__planner_8h__dep__incl.md5  b__rrt__star__planner_8h__incl.map  b__rrt__star__planner_8h__incl.md5  b__rrt__star__planner_8h_source.html  classes.html  classglobalPlanner_1_1CatmullRomSpline-members.html  classglobalPlanner_1_1CatmullRomSpline.html  classglobalPlanner_1_1RRT_1_1BRRT-members.html  classglobalPlanner_1_1RRT_1_1BRRT.html  classglobalPlanner_1_1RRT_1_1IBRRT-members.html  classglobalPlanner_1_1RRT_1_1IBRRT.html  classglobalPlanner_1_1RRT_1_1PIBRRT-members.html  classglobalPlanner_1_1RRT_1_1PIBRRT.html  classglobalPlanner_1_1RRT_1_1PIBRRT__coll__graph.map  classglobalPlanner_1_1RRT_1_1PIBRRT__coll__graph.md5  classglobalPlanner_1_1RRT_1_1RRTStar-members.html  classglobalPlanner_1_1RRT_1_1RRTStar.html  classglobalPlanner_1_1RRT_1_1ThreadPool-members.html  classglobalPlanner_1_1RRT_1_1ThreadPool.html  classglobalPlanner_1_1pathPlanner-members.html  classglobalPlanner_1_1pathPlanner.html  classglobalPlanner_1_1pathPlanner__coll__graph.map  classglobalPlanner_1_1pathPlanner__coll__graph.md5  dir_000004_000003.html  dir_028af1237f2fde2324d007db6eea6b37.html  dir_028af1237f2fde2324d007db6eea6b37_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_e36ff9944ebd9ab755b6457b2b026ca0.html  dir_e36ff9944ebd9ab755b6457b2b026ca0_dep.map  dir_e36ff9944ebd9ab755b6457b2b026ca0_dep.md5  dir_e485dcc37f5f677c6612ed7d92fccae8.html  dir_f63058bf94e36e62d821dec5176cffd3.html  dir_f63058bf94e36e62d821dec5176cffd3_dep.map  files.html  functions.html  (+117 more)
path_planner/docs/latex/: annotated.tex  b__rrt__star__planner_8h.tex  b__rrt__star__planner_8h__dep__incl.md5  b__rrt__star__planner_8h__incl.md5  classglobalPlanner_1_1CatmullRomSpline.tex  classglobalPlanner_1_1RRT_1_1BRRT.tex  classglobalPlanner_1_1RRT_1_1IBRRT.tex  classglobalPlanner_1_1RRT_1_1PIBRRT.tex  classglobalPlanner_1_1RRT_1_1PIBRRT__coll__graph.md5  classglobalPlanner_1_1RRT_1_1RRTStar.tex  classglobalPlanner_1_1RRT_1_1ThreadPool.tex  classglobalPlanner_1_1pathPlanner.tex  classglobalPlanner_1_1pathPlanner__coll__graph.md5  dir_028af1237f2fde2324d007db6eea6b37.tex  dir_028af1237f2fde2324d007db6eea6b37_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_e36ff9944ebd9ab755b6457b2b026ca0.tex  dir_e485dcc37f5f677c6612ed7d92fccae8.tex  dir_f63058bf94e36e62d821dec5176cffd3.tex  dir_f63058bf94e36e62d821dec5176cffd3_dep.md5  files.tex  hierarchy.tex  ib__rrt__star__planner_8h.tex  ib__rrt__star__planner_8h__dep__incl.md5  ib__rrt__star__planner_8h__incl.md5  namespaceglobalPlanner.tex  namespaceglobalPlanner_1_1RRT.tex  namespaces.tex  parallel__ib__rrt__star__planner_8h.tex  parallel__ib__rrt__star__planner_8h__dep__incl.md5  parallel__ib__rrt__star__planner_8h__incl.md5  path__planner__node_8cpp.tex  path__planner__node_8cpp__incl.md5  path__planner__node_8h.tex  path__planner__node_8h__dep__incl.md5  path__planner__node_8h__incl.md5  path__smoothing_8h.tex  path__smoothing_8h__dep__incl.md5  refman.tex  rrt__star__planner_8h.tex  (+15 more)
path_planner/include/: b_rrt_star_planner.h  ib_rrt_star_planner.h  parallel_ib_rrt_star_planner.h  path_planner_node.h  path_smoothing.h  rrt_planner.h  rrt_star_planner.h  thread_pool.h
path_planner/launch/: path_planner.launch
path_planner/src/: path_planner_node.cpp  rrt_planner.cpp
pointcloud_publisher/: CMakeLists.txt  Doxyfile  package.xml
pointcloud_publisher/docs/: Doxyfile.in
pointcloud_publisher/docs/html/: annotated.html  classPlyPublisher-members.html  classPlyPublisher.html  classPlyPublisher__coll__graph.map  classPlyPublisher__coll__graph.md5  classPly__publisher-members.html  classPly__publisher.html  classPly__publisher__coll__graph.map  classPly__publisher__coll__graph.md5  classPly__publisher__inherit__graph.map  classPublisher-members.html  classPublisher.html  classPublisher__inherit__graph.map  classPublisher__inherit__graph.md5  classes.html  cloud__publisher__node_8cpp.html  cloud__publisher__node_8cpp__incl.map  cloud__publisher__node_8cpp__incl.md5  dir_000004_000003.html  dir_028af1237f2fde2324d007db6eea6b37.html  dir_028af1237f2fde2324d007db6eea6b37_dep.map  dir_028af1237f2fde2324d007db6eea6b37_dep.md5  dir_3999dc0c25a9d91e1d2910851d686c10.html  dir_b3410937a324443e0c43e74e21c8a422.html  dir_b3410937a324443e0c43e74e21c8a422_dep.map  dir_b3410937a324443e0c43e74e21c8a422_dep.md5  dir_f82650fd4c9903ab7dd74e61ca2ecd8c.html  dir_f82650fd4c9903ab7dd74e61ca2ecd8c_dep.map  dir_f82650fd4c9903ab7dd74e61ca2ecd8c_dep.md5  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  (+17 more)
pointcloud_publisher/docs/latex/: annotated.tex  classPlyPublisher.tex  classPlyPublisher__coll__graph.md5  classPly__publisher.tex  classPly__publisher__coll__graph.md5  classPublisher.tex  classPublisher__inherit__graph.md5  cloud__publisher__node_8cpp.tex  cloud__publisher__node_8cpp__incl.md5  dir_028af1237f2fde2324d007db6eea6b37.tex  dir_3999dc0c25a9d91e1d2910851d686c10.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_b3410937a324443e0c43e74e21c8a422.tex  dir_f82650fd4c9903ab7dd74e61ca2ecd8c.tex  files.tex  hierarchy.tex  index.tex  ply__publisher_8cpp.tex  ply__publisher_8cpp__incl.md5  ply__publisher_8h.tex  (+6 more)
pointcloud_publisher/include/: ply_publisher.h  pointcloud_publisher.h
pointcloud_publisher/launch/: 3d_mapping_d435i.launch  publish_pointcloud.launch
pointcloud_publisher/rviz/: 3d_mapping_rviz.rviz  pointcloud_publisher_rviz.rviz
pointcloud_publisher/scripts/: custom_aruco_dictionary.npy  map_to_odom_transformation.py  marker_map_reference.py
pointcloud_publisher/src/: cloud_publisher_node.cpp  ply_publisher.cpp
(+98 files in other folders)
